Fix tab collapse
index.css hiddenRow can be messed with to maybe see if the formatting can be nicer.

--- a/static/index.css
+++ b/static/index.css
@@ -51,3 +51,7 @@ td {
 #tabs > li {
   font-family: monospace, sans-serif;
 }
+
+.hiddenRow {
+    padding: 0 !important;
+}
